--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -4,14 +4,9 @@ layout: default
 <div class="post">
     <header class="post-header">
         <h1 class="post-title">
-            {% if site.title == 'blank' %}
-                <span class="font-weight-bold">{{ site.first_name }}</span>
-                {{ site.last_name }}
-            {% else %}
-                {{ site.title }}
-            {% endif %}
+            <span class="font-weight-bold">{{ site.last_name }}{{ site.first_name }}</span>
         </h1>
-        <p class="desc">{{ page.subtitle }}</p>
+        <p class="desc font-weight-bold">{{ site.last_name_en }}, {{ site.first_name_en }}</p>
     </header>
 
     <article>
