--- a/_layouts/bib.liquid
+++ b/_layouts/bib.liquid
@@ -243,7 +243,7 @@
                 <a class="jcr btn btn-sm z-depth-0" role="button">JCR Q{{ entry.jcr }}</a>
             {% endif %}
             {% if entry.sci and site.active_lang == 'zh-cn' %}
-                <a class="sci btn btn-sm z-depth-0" role="button">SCI {{ entry.sci }}区</a>
+                <a class="sci btn btn-sm z-depth-0" role="button">中科院{{ entry.sci }}区</a>
             {% endif %}
             {% if entry.if %}
                 <a class="IF btn btn-sm z-depth-0" role="button">IF={{ entry.if }}</a>
