--- a/_includes/metadata.liquid
+++ b/_includes/metadata.liquid
@@ -19,6 +19,7 @@
 <!-- Standard metadata -->
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<meta name="msvalidate.01" content="5770B9DAB2470677E795792B8DD79BD1" />
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 {% if site.title == 'blank' %}
     {% capture title %}{{ author_name }}{% endcapture %}
