--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -1,25 +1,28 @@
 {% capture footer_contents %}
-  {% if site.last_updated %}
-    {{- site.data[site.active_lang].strings.footer.last_updated }}
-    {% assign beijing_time = 'now' | date: '%s' | plus: 28800 | date: '%Y/%m/%d %H:%M:%S' %}
-    {{ beijing_time }}
-  {% endif %}
+    {% if site.last_updated %}
+        {{- site.data[site.active_lang].strings.footer.last_updated }}
+        {% assign beijing_time = 'now' | date: '%s' | plus: 28800 | date: '%Y/%m/%d %H:%M:%S' %}
+        {{ beijing_time }}
+        <script src="//cdn.busuanzi.cc/busuanzi/3.6.9/busuanzi.min.js" defer></script>
+        今日总访问量 <span id="busuanzi_today_pv">加载中...</span> 次
+        本站总访问量 <span id="busuanzi_site_pv">加载中...</span> 次
+    {% endif %}
 {% endcapture %}
 
 {% if site.footer_fixed %}
-  <footer class="fixed-bottom" role="contentinfo">
-    <div class="container mt-0">
-      {{ footer_contents }}
-    </div>
-  </footer>
+    <footer class="fixed-bottom" role="contentinfo">
+        <div class="container mt-0">
+            {{ footer_contents }}
+        </div>
+    </footer>
 {% else %}
-  <footer class="sticky-bottom mt-5" role="contentinfo">
-    {% if site.newsletter.enabled %}
-      {% include newsletter.liquid %}
-    {% endif %}
+    <footer class="sticky-bottom mt-5" role="contentinfo">
+        {% if site.newsletter.enabled %}
+            {% include newsletter.liquid %}
+        {% endif %}
 
-    <div class="container">
-      {{ footer_contents }}
-    </div>
-  </footer>
+        <div class="container">
+            {{ footer_contents }}
+        </div>
+    </footer>
 {% endif %}
