--- a/_includes/footer.liquid
+++ b/_includes/footer.liquid
@@ -4,8 +4,10 @@
         {% assign beijing_time = 'now' | date: '%s' | plus: 28800 | date: '%Y/%m/%d %H:%M:%S' %}
         {{ beijing_time }}
         <script src="//cdn.busuanzi.cc/busuanzi/3.6.9/busuanzi.min.js" defer></script>
-        今日总访问量 <span id="busuanzi_today_pv">加载中...</span> 次
-        本站总访问量 <span id="busuanzi_site_pv">加载中...</span> 次
+        {{ site.data[site.active_lang].strings.footer.today_visit }} <span
+            id="busuanzi_today_pv">{{ site.data[site.active_lang].strings.newsletter.wait }}</span>
+        {{ site.data[site.active_lang].strings.footer.total_visit }} <span
+            id="busuanzi_site_pv">{{ site.data[site.active_lang].strings.newsletter.wait }}</span>
     {% endif %}
 {% endcapture %}
 
